--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 *.zip
 **/.DS_Store
+out/artifacts/java_8080_final_jar/_DS_Store
+out/production/java 8080 final/.DS_Store
+out/production/java 8080 final/.DS_Store
+out/production/java 8080 final/.DS_Store
+out/production/java 8080 final/sound/.DS_Store
